--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,10 +1,10 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #44A08D;
+$secondary-color: #093637;
 
-$white-color: #fff;
+$white-color: whitesmoke;
 
-$dark-grey: #333333;
+$dark-grey: #000000;
 
 $dark-blue-text: #272341; // For Headings
 
